# dwfx2pdf

./: .gitignore  .pyre_configuration  LICENSE  README.md  dwfx_to_pdf.py  pyproject.toml  requirements.txt  run.sh  web_app.py
static/: app.js  style.css
templates/: index.html
tests/: test_web.py
